src/objects/Vendor_Invoicing_Header__c.object
<CustomObject>
    <fields>
        <fullName>AccountingId__c</fullName>
        <description>Accounting Id</description>
        <label>AccountingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountingResponse__c</fullName>
        <description>Accounting Response</description>
        <label>AccountingResponse</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accounting_Last_Sync_Time_Variance_JE__c</fullName>
        <label>Accounting Last Sync Time Variance JE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accounting_Response_Variance_JE__c</fullName>
        <label>Accounting Response Variance JE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicable_Purchase_Tax_Name__c</fullName>
        <label>Applicable Purchase Tax Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_For_QB_Variance_JE_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For QB Variance JE Sync</label>
        <type>Checkbox</type>
  	</fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Variance_JE_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Variance JE Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Include_Other_Charge_In_Costing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On each vendor invoice the user will have this option to initiate the process of allocating other charges against part inventory costs.</description>
        <inlineHelpText>On each vendor invoice the user will have this option to initiate the process of allocating other charges against part inventory costs.</inlineHelpText>
        <label>Include Other Charge In Costing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Date_Formula__c</fullName>
        <formula>DATETIMEVALUE( Invoice_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date Formula</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>Closed_Invoice_Date__c</fullName>
        <description>It is used to store date when finalize invoice action has happened</description>
        <label>Closed Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
	    <fullName>FX_Conversion_Rate__c</fullName>
	    <description>This field hold the value of foreign currency conversion rate with Markup at the time VI is finalized.</description>
	    <inlineHelpText>This field hold the value of foreign currency conversion rate with Markup at the time VI is finalized.</inlineHelpText>
	    <label>FX Conversion Rate</label>
	    <precision>18</precision>
	    <scale>6</scale>
	    <type>Number</type>
    </fields>
    <fields>
        <fullName>Backward_Conversion_Rate__c</fullName>
        <description>Backward Conversion Rate With Markup</description>
        <formula>if((ISNULL(FX_Conversion_Rate__c) || FX_Conversion_Rate__c = 0),1,1/FX_Conversion_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Backward Conversion Rate With Markup</inlineHelpText>
        <label>Backward Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice#</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendor_Invoicing_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Taxable_Total__c</fullName>
        <formula>IF( ISBLANK( Sub_Total__c ) , 0,  Sub_Total__c  -  Taxable_Total__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Taxable Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Vendor Invoicing Header Owners</relationshipLabel>
        <relationshipName>Vendor_Invoicing_Header_Owners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QB_Variance_JE_Accounting_Id__c</fullName>
        <label>QB Variance JE Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <description>Gives sub total with Other Charges Without Including The Taxes</description>
        <formula>Total__c + Total_Other_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SyncToken__c</fullName>
        <description>SyncToken</description>
        <label>SyncToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Token_For_Variance_JE__c</fullName>
        <label>Sync Token For Variance JE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount_For_Other_Charges__c</fullName>
        <label>Tax Amount For Other Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Total__c</fullName>
        <description>The Total of Tax Amounts</description>
        <formula>Tax_Amount__c + Tax_Amount_For_Other_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxable_Total__c</fullName>
        <formula>IF(NOT(ISBLANK(Tax_Total__c)) &amp;&amp; Tax_Total__c &gt; 0, Sub_Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxable Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other_Charges__c</fullName>
        <label>Total Other Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_With_Tax__c</fullName>
        <formula>Total__c + Total_Other_Charges__c + Tax_Amount__c + Tax_Amount_For_Other_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Number__c</fullName>
        <formula>IF( ISNULL( Invoice_Number__c ) || ISBLANK( Invoice_Number__c ) , Name , Invoice_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
	    <fullName>Vendor_Name__c</fullName>
	    <formula>Vendor__r.Name</formula>
	    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
	    <label>Vendor Name</label>
	    <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Invoicing Headers</relationshipLabel>
        <relationshipName>Vendor_Invoicing_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Variance_JE_Accounting_Id__c</fullName>
        <label>Xero Variance JE Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountingLastSyncTime__c</fullName>
        <description>accounting Last Sync Time</description>
        <label>accountingLastSyncTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>availForQBSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>availForQBJournalEntrySync</description>
        <label>availForQBSync</label>
        <type>Checkbox</type>
    </fields>
    <label>Vendor Invoicing Header</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Async_QB_Vendor_Invoice_Variance_JE</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_For_QB_Variance_JE_Sync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async QB Vendor Invoice Variance JE</label>
    </listViews>
    <listViews>
        <fullName>Async_QB_Vendor_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>availForQBSync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async QB Vendor Invoices</label>
    </listViews>
    <listViews>
        <fullName>In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Vendor__c</columns>
        <columns>Invoice_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Async_Xero_VO_Invoice</fullName>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <columns>Total__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_For_Xero_Sync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async Xero VO Invoice</label>
    </listViews>
    <listViews>
        <fullName>Async_Xero_VO_Invoice_Variance_JE</fullName>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <columns>Total__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_For_Xero_Variance_JE_Sync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async Xero VO Invoice Variance JE</label>
    </listViews>
    <nameField>
        <displayFormat>VI-{0000000}</displayFormat>
        <label>Vendor Invoicing Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoicing Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>